force-app/main/default/objects/VS_OTP_Verification__c/fields/VS_Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>VS_Code_Hash__c</fullName>
    <label>Code Hash</label>
    <description>A one-way SHA-256 HASH (hex, salted with the mobile) of the OTP code -- the plaintext code is NEVER stored anywhere on the platform (D-013, hard requirement). VS_OtpService.issue() computes and stores this; verify() hashes the citizen-supplied code the same way and compares hashes, never plaintext. 64 hex characters for SHA-256; stored at length 128 to leave headroom for a future salt/algorithm change without a schema migration. Optional (not required) so it can carry FLS on the test-context permission set and avoid required-field system-mode DML (D-028).</description>
    <type>Text</type>
    <length>128</length>
</CustomField>